<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home6"
    android:orientation="vertical"
    tools:context=".Activities.QuestionsActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/user"
        android:contentDescription="@string/todo" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/LevelPager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_290sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LevelPager"
        app:layout_constraintVertical_bias="0.256">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LevelNext"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/background_but"
            android:backgroundTint="@color/purple_200"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_28ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LevelSkip"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/background_but"
            android:backgroundTint="@color/purple_200"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_28ssp" />
    </LinearLayout>

    <TextView
        android:id="@+id/LevelNumMystery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/question_count_3"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LevelTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/LevelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/level"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>