<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_290sdp"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp"
    tools:context=".Fragments.Q3Fragment">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp" />

    <TextView
        android:id="@+id/q_tvScour2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/scour"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/FillTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp" />

    <EditText
        android:id="@+id/FillAnswer"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/background_but"
        android:backgroundTint="@color/purple2"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:autofillHints="Answer"
        android:hint="@string/enter_your_answer"
        android:textColorHint="@color/mdtp_light_gray"
        android:padding="@dimen/_10sdp"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CheckBtn"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/background_but"
        android:text="@string/check"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp" />


</LinearLayout>